# tpt

./: 2fw  2fw.in  AUTHORS  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  fsplit  fsplit.in  lblmp  lblmp.in  multidoc  multidoc.in  multidocw  multidocw.in  unstruct  unstruct.in  workonw  workonw.in
